# ghostscope

./: .dockerignore  .ghostscope_history  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPROVED_VARIABLE_DESIGN.md  README-zh.md  README.md  UPROBE_SOURCE_LINE_OFFSET_ISSUE.md  config-zh.toml  config.toml  debug_demo.rs  deny.toml  index.html  log  precise_debug  test-bad-config.toml  w
bins/debuginfod-client/: Cargo.toml
bins/debuginfod-client/src/: main.rs
bins/dwarf-tool/: Cargo.toml  README.md
bins/dwarf-tool/src/: main.rs
bins/dwarf-tool/tests/: demangle_lookup.rs  dwarf_parsing.rs
e2e-tests/: Cargo.toml  README.md  cache-fixtures.sh  compile-fixtures.sh  compile-rust-compat-fixtures.sh  rust-compat-toolchains.txt
e2e-tests/src/: lib.rs
e2e-tests/tests/: backtrace_execution.rs  c_multithread_execution.rs  cast_types_execution.rs  common_fixture_builds.rs  complex_types_execution.rs  container_topology_execution.rs  cpp_script_execution.rs  debuginfod_execution.rs  dwarf_index_regressions.rs  entry_value_recovery_execution.rs  globals_execution.rs  globals_target_execution.rs  manual_gdb_ghostscope_benchmark.rs  member_pointer_compilation.rs  member_pointer_execution.rs  optimized_inline_call_value_execution.rs  optimized_inline_execution.rs  partitioned_ranges_execution.rs  runner_lifecycle.rs  rust_adapter_diagnostics_execution.rs  rust_legacy_btree_execution.rs  rust_legacy_hash_execution.rs  rust_legacy_sequence_execution.rs  rust_legacy_string_execution.rs  rust_path_execution.rs  rust_rc_str_execution.rs  rust_script_execution.rs  rust_version_matrix_execution.rs  scalar_types_execution.rs  script_execution.rs  startup_load_report_execution.rs  static_scope_execution.rs
e2e-tests/tests/common/: mod.rs  runner.rs  rust_toolchain.rs  sandbox.rs  targets.rs  termination.rs
ghostscope/: Cargo.toml  README.md
ghostscope-binary/: Cargo.toml
ghostscope-binary/src/: binary_analyzer.rs  cfi.rs  debuglink.rs  dwarf.rs  elf.rs  expression.rs  file.rs  lib.rs  line_lookup.rs  process.rs  scoped_variables.rs  symbol.rs
ghostscope-compiler/: Cargo.toml  README.md
ghostscope-compiler/src/: ast.rs  ast_compiler.rs  codegen.rs  debug_logger.rs  grammar.pest  lib.rs  map.rs  parser.rs  platform.rs
ghostscope-compiler/src/ebpf/: codegen.rs  context.rs  debug_logger.rs  dwarf_bridge.rs  expression.rs  expression_plan.rs  helper_functions.rs  instruction.rs  maps.rs  mod.rs  protocol.rs  variables.rs
ghostscope-compiler/src/script/: ast.rs  compiler.rs  format_validator.rs  grammar.pest  mod.rs  parser.rs
ghostscope-debuginfod/: Cargo.toml
ghostscope-debuginfod/src/: lib.rs
ghostscope-dwarf/: Cargo.toml  README.md
ghostscope-dwarf/src/: analysis_cache.rs  analyzer.rs  debuglink.rs  lib.rs  loader.rs  path_match.rs  planner.rs  proc_mapping.rs
ghostscope-dwarf/src/analyzer/: cache.rs  mod.rs  module_resolution.rs  plan_global.rs  plan_pc.rs  source_resolution.rs  tests.rs  type_context.rs  type_lookup.rs  types.rs
ghostscope-dwarf/src/binary/: debuglink.rs  mapped_file.rs  mod.rs
ghostscope-dwarf/src/core/: demangle.rs  diagnostic.rs  dwarf_types.rs  errors.rs  evaluation.rs  ids.rs  mapping.rs  mod.rs  plan.rs  symbol_names.rs  types.rs
ghostscope-dwarf/src/data/: block_index.rs  cfi_index.rs  file_manager.rs  lightweight_file_index.rs  lightweight_index.rs  line_mapping.rs  mod.rs  on_demand_resolver.rs  path.rs  type_index.rs
ghostscope-dwarf/src/dwarf_expr/: call_site.rs  cfa.rs  const_eval.rs  entry_value.rs  errors.rs  lower.rs  mod.rs  modes.rs  ops.rs  scan.rs  storage.rs
ghostscope-dwarf/src/index/: block_index.rs  cfi_index.rs  lightweight_file_index.rs  lightweight_index.rs  line_mapping.rs  mod.rs  native_gdb_index.rs  path.rs  type_index.rs
ghostscope-dwarf/src/language/: adapter.rs  mod.rs  rust.rs
ghostscope-dwarf/src/module/: data.rs  mod.rs
ghostscope-dwarf/src/objfile/: access_planner.rs  function_lookup.rs  globals.rs  loaded.rs  loading.rs  mod.rs  source_location.rs  type_context.rs  unwind.rs  variables.rs
ghostscope-dwarf/src/parser/: detailed_parser.rs  expression_evaluator.rs  fast_parser.rs  fast_paths.rs  mod.rs  range_extractor.rs  type_resolver.rs
ghostscope-dwarf/src/resolver/: mod.rs  (+1 more)
ghostscope-dwarf/tests/: rust_version_compatibility.rs
ghostscope-loader/: Cargo.toml  README.md
ghostscope-loader/src/: error.rs  kernel_caps.rs  lib.rs  map.rs  uprobe.rs
ghostscope-platform/: Cargo.toml  README.md
ghostscope-platform/src/: calling_convention.rs  lib.rs  register_mapping.rs  tls.rs  types.rs
ghostscope-process/: Cargo.toml  README.md  build.rs
ghostscope-process/ebpf/: build_sysmon_bpf.sh
ghostscope-process/src/: cookie.rs  lib.rs  maps.rs  module_probe.rs  offsets.rs  pinned_bpf_maps.rs  proc_maps.rs  sysmon.rs  target_arch.rs  util.rs
ghostscope-protocol/: Cargo.toml  README.md
ghostscope-protocol/src/: bpf_abi.rs  dwarf_types.rs  event.rs  format_printer.rs  lib.rs  streaming_parser.rs  string_table.rs  trace_context.rs  trace_event.rs  type_info.rs  type_kind.rs  types.rs  utils.rs  value_presentation.rs
ghostscope-ui/: Cargo.toml  README.md
ghostscope-ui/src/: action.rs  events.rs  lib.rs  panels.rs  streaming_parser_bridge.rs  syntax_highlight.rs  trace.rs  tui_app.rs
ghostscope-ui/tests/: additional_ui_coverage_test.rs  advanced_ui_test.rs  ansi_color_test.rs  app_integration_test.rs  command_mode_movement_test.rs  complex_interaction_test.rs  detailed_feature_test.rs  integration_test.rs  realtime_save_test.rs
ghostscope/src/: args.rs  command_line.rs  lib.rs  logging.rs  main.rs  pid.rs  script_compiler.rs  session.rs  source_path.rs  trace_manager.rs  tui_coordinator.rs  util.rs
ghostscope/tests/: complex_types_execution.rs  container_topology_execution.rs  cpp_script_execution.rs  dwarf_index_regressions.rs  dwarf_parsing.rs  globals_execution.rs  globals_target_execution.rs  member_pointer_compilation.rs  optimized_execution.rs  optimized_inline_execution.rs  pid_namespace_execution.rs  rust_script_execution.rs  script_execution.rs
(+582 files in other folders)
