[workspace]
resolver = "2"
members = [
    "ghostscope-compiler",
    "ghostscope-loader",
    "ghostscope-ui",
    "ghostscope-protocol",
    "ghostscope-platform",
    "ghostscope",
    "ghostscope-dwarf",
    "ghostscope-process",
    "bins/dwarf-tool",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
authors = ["swananan <jt26wzz@gmail.com>"]
license = "GPL-3.0-only"
description = "GhostScope brings DWARF-aware eBPF tracing to user-space binaries with a printf-like experience."
readme = "README.md"
repository = "https://github.com/swananan/ghostscope"
homepage = "https://github.com/swananan/ghostscope"
documentation = "https://github.com/swananan/ghostscope#readme"
keywords = ["ebpf", "gdb", "dwarf", "debugger"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[workspace.dependencies]
log = "0.4.22"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.93"
tracing = "0.1.41"
tracing-log = "0.2.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
futures-util = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
object = "0.36"

gimli = "0.31.1"
aya = "0.13.1"
aya-obj = "0.2.1"
aya-ebpf-bindings = "0.1.1"
aya-build = "0.1.2"

# Test dependencies
tempfile = "3.8"
lazy_static = "1.4"
serial_test = "3.0"
criterion = "0.5"
scopeguard = "1.2"
