[workspace]
resolver = "2"
members = [
    "ghostscope-compiler",
    "ghostscope-loader",
    "ghostscope-ui",
    "ghostscope-protocol",
    "ghostscope-platform",
    "ghostscope",
    "ghostscope-dwarf",
    "ghostscope-debuginfod",
    "ghostscope-process",
    "bins/debuginfod-client",
    "bins/dwarf-tool",
    "e2e-tests",
]
default-members = [
    "ghostscope-compiler",
    "ghostscope-loader",
    "ghostscope-ui",
    "ghostscope-protocol",
    "ghostscope-platform",
    "ghostscope",
    "ghostscope-dwarf",
    "ghostscope-debuginfod",
    "ghostscope-process",
    "bins/debuginfod-client",
    "bins/dwarf-tool",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.88"
authors = ["swananan <jt26wzz@gmail.com>"]
license = "GPL-3.0-only"
description = "GhostScope brings DWARF-aware eBPF tracing to user-space binaries with a printf-like experience."
readme = "README.md"
repository = "https://github.com/swananan/ghostscope"
homepage = "https://github.com/swananan/ghostscope"
documentation = "https://github.com/swananan/ghostscope#readme"
keywords = ["ebpf", "gdb", "dwarf", "debugger"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[workspace.dependencies]
log = "0.4.29"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-log = "0.2.0"
thiserror = "2.0.18"
tokio = { version = "1.50", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
futures-util = "0.3"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
object = "0.39"

gimli = "0.33.0"
aya = { git = "https://github.com/aya-rs/aya.git", rev = "5dd4bd440bdf0e29a695cad088fdb1716229633b" }
aya-obj = { git = "https://github.com/aya-rs/aya.git", rev = "5dd4bd440bdf0e29a695cad088fdb1716229633b" }
aya-ebpf-bindings = { git = "https://github.com/aya-rs/aya.git", rev = "5dd4bd440bdf0e29a695cad088fdb1716229633b" }
aya-build = { git = "https://github.com/aya-rs/aya.git", rev = "5dd4bd440bdf0e29a695cad088fdb1716229633b" }

# Test dependencies
tempfile = "3.27"
lazy_static = "1.4"
serial_test = "3.4"
criterion = "0.5"
scopeguard = "1.2"
