[package]
name = "ghostscope-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1", "target-bpf"] }
pest = "2.7"
pest_derive = "2.7"
tracing = { workspace = true }
tracing-log = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
aya-ebpf-bindings = "0.1.1"
ghostscope-binary = { path = "../ghostscope-binary" }
ghostscope-protocol = { path = "../ghostscope-protocol" }
