[package]
name = "ghostscope-dwarf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
description = "DWARF parser and symbolizer used by GhostScope to resolve variables and types at runtime."

[dependencies]
gimli.workspace = true
object.workspace = true
memmap2 = "0.9"
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
ghostscope-platform = { version = "0.1.1", path = "../ghostscope-platform" }
ghostscope-protocol = { version = "0.1.1", path = "../ghostscope-protocol" }
ghostscope-process = { version = "0.1.1", path = "../ghostscope-process" }
rustc-demangle = "0.1"
cpp_demangle = "0.4"
rayon = "1.10"

# For parallel loading
tokio.workspace = true
futures.workspace = true
num_cpus = "1.0"

# For proc mapping parsing (temporary, will extract from ghostscope-binary)
libc = "0.2"

# For .gnu_debuglink CRC validation
crc32fast = "1.4"

# For home directory expansion in debug search paths
dirs = "5.0"
