[package]
name = "ghostscope-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostscope-compiler = { path = "../ghostscope-compiler" }
ghostscope-protocol = { path = "../ghostscope-protocol" }
ghostscope-process = { path = "../ghostscope-process" }
aya = { workspace = true }
aya-obj = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "mio", "net"] }
bytes = "1.5"
