[package]
name = "ghostscope-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Loads compiled GhostScope programs, manages sessions, and orchestrates eBPF lifecycle."

[dependencies]
ghostscope-compiler = { version = "0.1.1", path = "../ghostscope-compiler" }
ghostscope-protocol = { version = "0.1.1", path = "../ghostscope-protocol" }
ghostscope-process = { version = "0.1.1", path = "../ghostscope-process" }
aya = { workspace = true }
aya-obj = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "mio", "net"] }
log = { workspace = true }
bytes = "1.5"
