[package]
name = "ghostscope-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform abstraction layer that normalizes kernel, architecture, and BTF quirks for GhostScope."

[dependencies]
tracing = { workspace = true }
aya-ebpf-bindings = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
