[package]
name = "ghostscope-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Low-level process controller that coordinates probes, loaders, and eBPF programs on target binaries."

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
object = { workspace = true }
aya = { workspace = true }
aya-obj = { workspace = true }
ghostscope-protocol = { version = "0.1.4", path = "../ghostscope-protocol", features = ["aya-pod"] }
libc = "0.2"
bytes = "1"
memmap2 = "0.9"

[build-dependencies]
aya-build = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["sysmon-ebpf"]
sysmon-ebpf = ["aya-build"]
