[package]
name = "ghostscope-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
aya-ebpf-bindings = { workspace = true }
gimli = { workspace = true }
ghostscope-platform = { path = "../ghostscope-platform" }
zerocopy = { version = "0.8", features = ["derive"] }
