[package]
name = "ghostscope-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared protocol definitions and serialization glue for GhostScope components."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
aya-ebpf-bindings = { workspace = true }
gimli = { workspace = true }
ghostscope-platform = { version = "0.1.1", path = "../ghostscope-platform" }
zerocopy = { version = "0.8", features = ["derive"] }
