[package]
name = "ghostscope-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostscope-protocol = { path = "../ghostscope-protocol" }
ratatui = "0.28"
crossterm = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
unicode-width = "0.1"
