[package]
name = "ghostscope"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostscope-compiler = { path = "../ghostscope-compiler" }
ghostscope-loader = { path = "../ghostscope-loader" }
ghostscope-ui = { path = "../ghostscope-ui" }
ghostscope-binary = { path = "../ghostscope-binary" }
ghostscope-protocol = { path = "../ghostscope-protocol" }
dirs = "5.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
