[package]
name = "ghostscope"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostscope-compiler = { path = "../ghostscope-compiler" }
ghostscope-loader = { path = "../ghostscope-loader" }
ghostscope-ui = { path = "../ghostscope-ui" }
ghostscope-dwarf = { path = "../ghostscope-dwarf" }
ghostscope-protocol = { path = "../ghostscope-protocol" }
ghostscope-process = { path = "../ghostscope-process" }
dirs = "5.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
toml = { workspace = true }
serde = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# Test dependencies for integration tests
tempfile = { workspace = true }
lazy_static = { workspace = true }
scopeguard = { workspace = true }
serial_test = { workspace = true }
serde_json = { workspace = true }
regex = "1"
