[package]
name = "ghostscope"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line entrypoint that drives GhostScope compiler, loader, and UI end-to-end."

[dependencies]
ghostscope-compiler = { version = "0.1.1", path = "../ghostscope-compiler" }
ghostscope-loader = { version = "0.1.1", path = "../ghostscope-loader" }
ghostscope-ui = { version = "0.1.1", path = "../ghostscope-ui" }
ghostscope-dwarf = { version = "0.1.1", path = "../ghostscope-dwarf" }
ghostscope-protocol = { version = "0.1.1", path = "../ghostscope-protocol" }
ghostscope-process = { version = "0.1.1", path = "../ghostscope-process" }
dirs = "5.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
toml = { workspace = true }
serde = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
# Test dependencies for integration tests
tempfile = { workspace = true }
lazy_static = { workspace = true }
scopeguard = { workspace = true }
serial_test = { workspace = true }
serde_json = { workspace = true }
regex = "1"
