[package]
name = "debuginfod-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Standalone debuginfod client for exercising GhostScope's async debuginfod library."
publish = false

[[bin]]
name = "debuginfod-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ghostscope-debuginfod = { version = "0.1.4", path = "../../ghostscope-debuginfod" }
object.workspace = true
tokio.workspace = true
