[package]
name = "dwarf-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dwarf-tool"
path = "src/main.rs"

[dependencies]
ghostscope-dwarf = { path = "../../ghostscope-dwarf" }

# Command line parsing
clap.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# JSON output support
serde.workspace = true
serde_json.workspace = true