[package]
name = "sysmon-bpf"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", rev = "5dd4bd440bdf0e29a695cad088fdb1716229633b" }

[profile.release]
debug = false
lto = false
opt-level = "z"
codegen-units = 1
panic = "abort"
