[package]
name = "sysmon-bpf"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", rev = "27483d75b34ab0a120f8c49575018d7d0688b938" }

[profile.release]
debug = false
lto = false
opt-level = "z"
codegen-units = 1
panic = "abort"
